--- a/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="L4D2_server_manager.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="gui.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -41,7 +38,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="L4D2_server_manager.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="gui.cpp">
