增加脚本文件进入到源码仓库

--- a/L4D2_server_manager/L4D2_server_manager.vcxproj
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj
@@ -155,6 +155,9 @@
     <Image Include="L4D2_server_manager.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="L4D2_Manager_API.sh" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
