--- a/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
@@ -67,4 +67,9 @@
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="L4D2_Manager_API.sh">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
