--- a/L4D2_server_manager/L4D2_server_manager.vcxproj
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="gui.h" />
     <ClInclude Include="manager.h" />
+    <ClInclude Include="plugin_manager.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ssh.h" />
     <ClInclude Include="targetver.h" />
@@ -146,6 +147,7 @@
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
+    <ClCompile Include="plugin_manager.cpp" />
     <ClCompile Include="ssh.cpp" />
   </ItemGroup>
   <ItemGroup>
