新增上传地图功能

--- a/L4D2_server_manager/L4D2_server_manager.vcxproj
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj
@@ -147,6 +147,8 @@
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
+    <ClCompile Include="map_manager.cpp" />
+    <ClCompile Include="map_manager.h" />
     <ClCompile Include="plugin_manager.cpp" />
     <ClCompile Include="ssh.cpp" />
   </ItemGroup>
