--- a/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="plugin_manager.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -63,6 +66,9 @@
       <Filter>头文件</Filter>
     </ClCompile>
     <ClCompile Include="map_manager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="config.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
