--- a/L4D2_server_manager/L4D2_server_manager.vcxproj
+++ b/L4D2_server_manager/L4D2_server_manager.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="cJSON.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="encoding_convert.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="gui.h" />
     <ClInclude Include="manager.h" />
@@ -146,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="cJSON.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="encoding_convert.cpp" />
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
